# saudi-laws-md

./: .gitignore  CHANGELOG.md  ENGINEERING_REVIEW.md  LICENSE  README.md  index.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: smoke.yml  tests.yml  update-corpus.yml
laws/: README.md
laws/أمر ملكي/: أمر ملكي رقم (آ ٥٦٧) إنشاء هيئة لتطوير الأحساء.md  أمر ملكي رقم (أ 347) إعفاء الأمير أحمد بن عبدالله آل سعود من منصبه.md  أمر ملكي رقم (أ 348) تكليف إبراهيم بن محمد بن سلمان بعمل الرئيس التنفيذي للهيئة الملكية لمدينة الرياض.md  أمر ملكي رقم (أ 349) تعيين فهد بن عبدالمحسن الرشيد مستشارا بالأمانة العامة لمجلس الوزراء.md  أمر ملكي رقم (أ 350) تعيين عبدالعزيز بن حسن البوق محافظا للمؤسسة العامة للتأمينات الاجتماعية.md  أمر ملكي رقم (أ ١٠١) تعيين الأمير فهد بن محمد آل سعود محافظا للخرج.md  أمر ملكي رقم (أ ١٠٢) إعفاء الدكتور عبدالرحمن ابن عبيد اليوبي من منصبه.md  أمر ملكي رقم (أ ١٠٣) تعيين الدكتور هشام آل شيخ مساعدا لرئيس هيئة حقوق الإنسان.md  أمر ملكي رقم (أ ١١) صالح الفوزان مفتيا عاما للملكة.md  (+115 more)
scripts/: arabic_numbers.py  audit_duplicates.py  build_index.py  canonicalize_urls.py  classify.py  discover.py  fetch.py  formatter.py  frontmatter.py  htmlmd.py  lint_corpus.py  main.py  reclassify.py  report.py  schema.py  smoke.py  urls.py
tests/: test_adapters.py  test_arabic_numbers.py  test_audit_duplicates.py  test_build_index.py  test_check_updates.py  test_classify.py  test_data_safety.py  test_discover.py  test_fetch.py  test_frontmatter.py  test_htmlmd.py  test_lint_corpus.py  test_reclassify.py  test_report.py  test_schema_formatter.py  test_urls.py
(+3425 files in other folders)
