[project]
name = "saudi-laws-md"
version = "0.1.0"
description = "تحويل نصوص الأنظمة السعودية من qanoonsa.com و nezams.com إلى Markdown موحد"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
